--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -9,23 +9,21 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/layout_topbar"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:background="@color/colorPrimaryDark">
+        android:layout_height="70dp"
+        android:padding="10dp">
 
-        <TextView
-            android:id="@+id/text_room_mode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="SELECTED MODE"
+        <Button
+            android:padding="5dp"
+            android:id="@+id/button_instructions"
+            android:text=" ? "
+            android:textSize="20dp"
             android:textColor="@color/colorWhite"
-            android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:background="@drawable/circle"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
